--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
         "@mdi/js": "^7.0.96",
         "axios": "^1.4.0",
         "cordova": "^5.3.3",
+        "highlight.js": "^10.7.3",
         "jquery": "^3.7.0",
+        "prismjs": "^1.29.0",
         "vite": "^4.4.8",
         "vue": "^3.2.26",
+        "vue-highlightjs": "^1.3.3",
+        "vue-hljs": "^3.0.1",
         "vue-loader": "^17.2.2",
+        "vue-prismjs": "^1.2.0",
         "vue-router": "^4.2.4",
         "vue-sweetalert2": "^5.0.5",
+        "vue3-code-block": "^2.2.12",
+        "vue3-prism": "^0.1.4",
         "vue3-toastify": "^0.1.11",
         "webpack": "^5.74.0"
     },
